@@ -49,6 +49,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11605: email.parser.BytesFeedParser was incorrectly converting multipart
+  subpararts with an 8bit CTE into unicode instead of preserving the bytes.
+
 - Issue #10963: Ensure that subprocess.communicate() never raises EPIPE.
 
 - Issue #11746: Fix SSLContext.load_cert_chain() to accept elliptic curve
